This smell good

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,24 +5,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-math-web demo</title>
+    <title>myscript-common-element basic demo</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../myscript-common-element.html">
+    <link rel="stylesheet" href="demo.css">
 </head>
 <style is="custom-style">
-    html, body {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-
-    myscript-common-element {
-        height: 100%;
-    }
-
     #result{
         --paper-toast-background-color: #1A9FFF;
         --paper-toast-color: white;
@@ -39,7 +28,7 @@
     typeset="true">
 </myscript-common-element>
 <script>
-    document.querySelector('myscript-common-element').addEventListener('result', function (event) {
+    document.querySelector('myscript-common-element').addEventListener('myscript-common-element-result', function (event) {
         const paperToast = document.querySelector('#result');
         paperToast.text = 'Recogntion object contains : ' + JSON.stringify(event.detail.result);
         paperToast.fitIn = paperToast.show();
