--- a/demo/init-error.html
+++ b/demo/init-error.html
@@ -4,25 +4,11 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-
-    <title>myscript-math-web demo</title>
-
+    <title>myscript-common-element init error demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../myscript-common-element.html">
+    <link rel="stylesheet" href="demo.css">
 </head>
-<style>
-    html, body {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-
-    myscript-common-element {
-        height: 100%;
-    }
-</style>
 <body touch-action="none">
 
 <myscript-common-element host="thisisnotanhost" hmackey="WRONG" type="MATH" protocol="REST">
