--- a/demo/shadow-dow-mode.html
+++ b/demo/shadow-dow-mode.html
@@ -1,5 +1,9 @@
 <!doctype html>
+<!----------------------------------------------------------------------------------->
+<!--*******************************   WARNING   ************************************-->
 <!-- This sample is not currently working. The style is not import from MyScriptJS -->
+<!--*******************************   WARNING   ************************************-->
+<!----------------------------------------------------------------------------------->
 <html>
 <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
@@ -16,20 +20,8 @@
         };
     </script>
     <link rel="import" href="../myscript-common-element.html">
+    <link rel="stylesheet" href="demo.css">
 </head>
-<style>
-    html, body {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-
-    myscript-common-element {
-        height: 100%;
-    }
-</style>
 <body touch-action="none">
 
 <myscript-common-element host="cloud-internal-stable.visionobjects.com"
