This smell good

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -393,7 +393,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                             observer: '_unloadedChanged'
                         },
                         /**
-                         * TODO
+                         * The underlying inkpaper created with MyScriptJS. This could allow to access more advanced properties. Mostly used for automatic testing currently.
                          */
                         inkpaper: {
                             type: Object
