This smell good

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -531,7 +531,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                     clear: function () {
                         if (this.inkpaper) {
                             this.inkpaper.clear();
-                            this.dispatchEvent(new CustomEvent('this.myscript-common-element-clear'));
+                            this.dispatchEvent(new CustomEvent('myscript-common-element-clear'));
                         }
                     },
                     /**
