[Stats]Moving to MS2.0

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -573,7 +573,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                      */
                     getStats: function () {
                         if (this.inkpaper) {
-                            return this.inkpaper.getStats();
+                            return this.inkpaper.stats;
                         }
                     },
                     /**
