[STYLE]Allowing to restyle buttons

--- a/demo/shadow-dow-mode.html
+++ b/demo/shadow-dow-mode.html
@@ -27,9 +27,7 @@
 <myscript-common-element host="cloud-internal-stable.visionobjects.com"
                          type="SHAPE"
                          applicationkey="9faa1259-48ba-44c4-9857-b3c86d986f94"
-                         hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0"
-                         timeout="2000"
-                         typeset="true">
+                         hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0">
 </myscript-common-element>
 </body>
 </html>
