--- a/demo/customstyle.html
+++ b/demo/customstyle.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="demo.css">
 </head>
 <style is="custom-style">
-    #result{
-        --paper-toast-background-color: #1A9FFF;
-        --paper-toast-color: white;
+    myscript-common-element {
+        --myscript-common-element-button-background : #ff7314;
+        --myscript-common-element-button-focus-background : #ff7314;
+        --myscript-common-element-button-disabled-background : #060903;
     }
 </style>
 <body touch-action="none">
@@ -23,14 +24,9 @@
     host="cloud-internal-stable.visionobjects.com"
     type="MATH"
     applicationkey="9faa1259-48ba-44c4-9857-b3c86d986f94"
-    hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0">
+    hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0"
+    timeout="2000">
 </myscript-common-element>
-<script>
-    document.querySelector('myscript-common-element').addEventListener('myscript-common-element-result', function (event) {
-        const paperToast = document.querySelector('#result');
-        paperToast.text = 'Recogntion object contains : ' + JSON.stringify(event.detail.result);
-        paperToast.fitIn = paperToast.show();
-    });
-</script>
+
 </body>
 </html>
