--- a/demo/stats.html
+++ b/demo/stats.html
@@ -23,9 +23,7 @@
     host="cloud-internal-stable.visionobjects.com"
     type="MATH"
     applicationkey="9faa1259-48ba-44c4-9857-b3c86d986f94"
-    hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0"
-    timeout="2000"
-    typeset="true">
+    hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0">
 </myscript-common-element>
 <script>
     document.querySelector('myscript-common-element').addEventListener('myscript-common-element-change', function (event) {
