--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -59,10 +59,9 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                 min-width: 200px;
                 height: 100%;
                 width: 100%;
-                --paper-fab-background: #1A9FFF;
-                --paper-fab-keyboard-focus-background: #1A9FFF;
-                --paper-fab-disabled-background: #F5F6F7;
-                --paper-fab-disabled-text: #dcdee0;
+                --paper-fab-background: var(--myscript-common-element-button-background, #1A9FFF);
+                --paper-fab-keyboard-focus-background: var(--myscript-common-element-button-focus-background, #1A9FFF);
+                --paper-fab-disabled-background: var(--myscript-common-element-button-disabled-background, #F5F6F7);
             }
 
             [hidden] {
