--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -390,7 +390,8 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS InkPa
                             reflectToAttribute: true
                         },
                         /**
-                         * TODO
+                         * Properties to set when you wish to set attributes in javascript. unloaded attributes shoudl be removed once all properties are set.
+                         * (see demo/programmatic-init.html for a better understanding)
                          */
                         unloaded: {
                             type: Boolean,
