--- a/demo/customstyle.html
+++ b/demo/customstyle.html
@@ -26,11 +26,12 @@
 </style>
 <body touch-action="none">
 <paper-toast id="result" class="fit-top"></paper-toast>
+<!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
 <myscript-common-element
-    host="cloud-internal-stable.visionobjects.com"
+    host="webdemoapi.myscript.com"
+    applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
+    hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
     type="MATH"
-    applicationkey="9faa1259-48ba-44c4-9857-b3c86d986f94"
-    hmackey="fb166b5d-3ffd-93bd-7b5b-bca0fe2216a0"
     strokecolor="white"
     strokewidth="10">
 </myscript-common-element>
