[DOC] Add missing doc

--- a/myscript-languages-element.html
+++ b/myscript-languages-element.html
@@ -124,7 +124,8 @@ LICENSE: [Apache License 2.0](http://www.apache.org/licenses/LICENSE-2.0)
                           notify: true
                         },
                         /**
-                         * TODO
+                         * Properties to set when you wish to set attributes in javascript. unloaded attributes should be removed once all properties are set.
+                         * (see demo/languages-selector-init.html for a better understanding)
                          */
                         unloaded: {
                             type: Boolean,
