[DEV] Add new samples and return array of element for languages list

--- a/demo/languages-selector-init.html
+++ b/demo/languages-selector-init.html
@@ -66,7 +66,7 @@
                 var languages = evt.detail;
                 for (var i in languages) {
                     var language = languages[i];
-                    languageElement.options[languageElement.options.length] = new Option(language, i, true, currentLanguage === i);
+                    languageElement.options[languageElement.options.length] = new Option(language.value, language.key, true, currentLanguage === language.key);
                     languageElement.disabled = false;
                 }
             });
