--- a/demo/index.html
+++ b/demo/index.html
@@ -24,7 +24,7 @@
     host="webdemoapi.myscript.com"
     applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
     hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
-    type="MATH">
+    type="SHAPE">
 </myscript-common-element>
 <script>
     document.querySelector('myscript-common-element').addEventListener('myscript-common-element-result', function (event) {
